--- a/app/templates/create_continent.html
+++ b/app/templates/create_continent.html
@@ -36,11 +36,8 @@
     
     <main>
       <div class="container mt-5">
-        <h1 class="text-center text-primary mb-4">List All Continent</h1>
-        <p class="text-center mb-5">Discover the diverse continents and their geographical features.</p>
-
-        <a href="/continent/create" class="btn btn-primary mb-4">Create a New Continent</a>
-
+        <h1 class="text-center text-primary mb-4">Create a New Continent</h1>
+    
         <!-- Display messages -->
         {% with messages = get_flashed_messages(with_categories=true) %}
           {% if messages %}
@@ -55,27 +52,22 @@
           {% endif %}
         {% endwith %}
 
-        {% if continents %}
-          
-          <table class="table table-striped table-hover table-bordered">
-            <thead class="table-primary">
-              <tr>
-                <th>Continent Name</th>
-                <th>Number of Countries</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for continent in continents %}
-                <tr>
-                  <td>{{ continent.Continent }}</td>
-                  <td>{{ continent.CountryCount }}</td>
-                </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-        {% else %}
-          <p class="text-center">No continent found.</p>
-        {% endif %}
+        <form method="POST">
+          <div class="mb-3">
+            <label for="name" class="form-label">Continent Name</label>
+            <input type="text" class="form-control" id="name" name="name" required>
+          </div>
+
+          <div class="mb-3">
+            <label for="name" class="form-label">Area Name</label>
+            <input type="number" class="form-control" id="area" name="area" required>
+          </div>
+
+          <button type="submit" class="btn btn-primary">Add Continent</button>
+        </form>
+
+        <br>
+        <a href="{{ url_for('routes.continents') }}" class="btn btn-secondary">Back to Continent List</a>
 
     </main>
     
