add update continent

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -47,6 +47,9 @@
                 <h5 class="card-title text-primary">Countries</h5>
                 <p class="card-text">Explore detailed information about countries from all over the world.</p>
                 <a href="/country" class="btn btn-primary d-block mx-auto">View Countries</a>
+                <a href="/country/create" class="btn btn-success d-block mx-auto mt-1">Create Countries</a>
+                <a href="/country/update" class="btn btn-warning d-block mx-auto mt-1">Update Countries</a>
+                <a href="/country/delete" class="btn btn-danger d-block mx-auto mt-1">Delete Countries</a>
               </div>
             </div>
           </div>
@@ -58,6 +61,9 @@
                 <h5 class="card-title text-primary">Continents</h5>
                 <p class="card-text">Discover the diverse continents and their geographical features.</p>
                 <a href="/continent" class="btn btn-primary d-block mx-auto">View Continents</a>
+                <a href="/continent/create" class="btn btn-success d-block mx-auto mt-1">Create Continents</a>
+                <a href="/continent/update" class="btn btn-warning d-block mx-auto mt-1">Update Continents</a>
+                <a href="/continent/delete" class="btn btn-danger d-block mx-auto mt-1">Delete Continents</a>
               </div>
             </div>
           </div>
