--- a/app/templates/create_country.html
+++ b/app/templates/create_country.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <title>Sistem Mondial - Continent</title>
+    <title>Sistem Mondial - Country</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
@@ -36,7 +36,7 @@
     
     <main>
       <div class="container mt-5">
-        <h1 class="text-center text-primary mb-4">Create a New Continent</h1>
+        <h1 class="text-center text-primary mb-4">Create a New Country</h1>
     
         <!-- Display messages -->
         {% with messages = get_flashed_messages(with_categories=true) %}
@@ -54,7 +54,7 @@
 
         <form method="POST">
           <div class="mb-3">
-            <label for="name" class="form-label">Continent Name</label>
+            <label for="name" class="form-label">Country Name</label>
             <input type="text" class="form-control" id="name" name="name" required>
           </div>
 
@@ -63,11 +63,11 @@
             <input type="number" class="form-control" id="area" name="area" required>
           </div>
 
-          <button type="submit" class="btn btn-primary">Add Continent</button>
+          <button type="submit" class="btn btn-primary">Add Country</button>
         </form>
 
         <br>
-        <a href="{{ url_for('routes.continents') }}" class="btn btn-secondary">Back to Continent List</a>
+        <a href="{{ url_for('routes.Countries') }}" class="btn btn-secondary">Back to Country List</a>
 
     </main>
     
