fix mismatch typo

--- a/app/templates/continent.html
+++ b/app/templates/continent.html
@@ -61,7 +61,7 @@
             <thead class="table-primary">
               <tr>
                 <th>Continent Name</th>
-                <th>Number of Countries</th>
+                <th>Area</th>
                 <th>Action</th>
               </tr>
             </thead>
