--- a/app/templates/create_continent.html
+++ b/app/templates/create_continent.html
@@ -19,14 +19,23 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="/country/gdp">Country and GDP Per Capita</a></li>
+                  <li><a class="dropdown-item" href="/country/resources">Country Resources</a></li>
+                </ul>
+              </li>
               <li class="nav-item">
-                <a class="nav-link" href="/home">Home</a>
+                <a class="nav-link" href="/continent">Continent</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/country">Country</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/continent">Continent</a>
+                <a class="nav-link" href="/home">Home</a>
               </li>
             </ul>
           </div>
