--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -34,8 +34,8 @@
                         <input type="password" class="form-control" id="password" name=password" placeholder="Enter your password" required>
                     </div>
                     <div class="mb-3">
-                        <label for="password" class="form-label">Role Type</label>
-                        <select type="password" class="form-control" id="password" name=password">
+                        <label for="role" class="form-label">Role Type</label>
+                        <select type="role" class="form-control" id="role" name=role">
                             <option value="CountryRole">Country</option>
                             <option value="ContinentRole">Continent</option>
                         </select>
