--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -29,10 +29,10 @@
                         <label for="username" class="form-label">Username</label>
                         <input type="text" class="form-control" id="username" name="username" placeholder="Enter your username" required>
                     </div>
-                    <div class="mb-3">
+                    <!-- <div class="mb-3">
                         <label for="password" class="form-label">Password</label>
                         <input type="password" class="form-control" id="password" name=password" placeholder="Enter your password" required>
-                    </div>
+                    </div> -->
                     <div class="mb-3">
                         <label for="role" class="form-label">Role Type</label>
                         <select type="role" class="form-control" id="role" name=role">
