--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -24,6 +24,7 @@
         <div class="container mt-5 d-flex justify-content-center align-items-center">
             <div class="card shadow-lg p-4" style="width: 100%; max-width: 400px;">
                 <h3 class="card-title text-center mb-4">Login</h3>
+                <h5 class="m-2">Digunakan untuk membuat login dan user baru.</h5>
                 <form method="POST" action="/login">
                     <div class="mb-3">
                         <label for="username" class="form-label">Username</label>
@@ -35,9 +36,6 @@
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Login</button>
                 </form>
-                <div class="text-center mt-3">
-                    <a href="/register" class="text-muted">Don't have an account? Register</a>
-                </div>
             </div>
         </div>
     </main>
