--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -24,6 +24,7 @@
         <div class="container mt-5 d-flex justify-content-center align-items-center">
             <div class="card shadow-lg p-4" style="width: 100%; max-width: 400px;">
                 <h3 class="card-title text-center mb-4">Register</h3>
+                <h5 class="m-2">Digunakan untuk menambahkan user ke role.</h5>
                 <form method="POST" action="/register">
                     <div class="mb-3">
                         <label for="username" class="form-label">Username</label>
