--- a/app/templates/country.html
+++ b/app/templates/country.html
@@ -37,6 +37,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/home">Home</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/logout">Logout</a>
+              </li>
             </ul>
           </div>
         </div>
