--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -51,8 +51,8 @@
           <div class="col-md-6">
             <form method="POST" action="/login" class="card shadow p-4">
               <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="text" class="form-control" id="email" name="email" placeholder="Enter your email" required>
+                <label for="username" class="form-label">Username</label>
+                <input type="text" class="form-control" id="username" name="username" placeholder="Enter your username" required>
               </div>
               <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
