--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -51,12 +51,8 @@
           <div class="col-md-6">
             <form method="POST" action="/register" class="card shadow p-4">
               <div class="mb-3">
-                <label for="name" class="form-label">Name</label>
-                <input type="text" class="form-control" id="name" name="name" placeholder="Fill your name" required>
-              </div>
-              <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="text" class="form-control" id="email" name="email" placeholder="Choose a email" required>
+                <label for="username" class="form-label">Username</label>
+                <input type="text" class="form-control" id="username" name="username" placeholder="Choose a username" required>
               </div>
               <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
