--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -66,6 +66,13 @@
                 <label for="confirm_password" class="form-label">Confirm Password</label>
                 <input type="password" class="form-control" id="confirm_password" name="confirm_password" placeholder="Confirm your password" required>
               </div>
+              <div class="mb-3">
+                <label for="role" class="form-label">Role Type</label>
+                <select type="password" class="form-control" id="role" name="role" required>
+                  <option value="country">Country</option>
+                  <option value="continent">Continent</option>
+                </select>
+              </div>
               <button type="submit" class="btn btn-primary w-100">Register</button>
             </form>
           </div>
