--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -28,12 +28,16 @@
                   <li><a class="dropdown-item" href="/country/resources">Country Resources</a></li>
                 </ul>
               </li>
+              {% if role == 'continent' %}
               <li class="nav-item">
                 <a class="nav-link" href="/continent">Continent</a>
               </li>
+              {% endif %}
+              {% if role == 'country' %}
               <li class="nav-item">
                 <a class="nav-link" href="/country">Country</a>
               </li>
+              {% endif %}
               <li class="nav-item">
                 <a class="nav-link" href="/home">Home</a>
               </li>
